UI: Fixed secret key input on mobile

--- a/ui-ngx/src/app/shared/components/secret-storage/secret-key-input.component.scss
+++ b/ui-ngx/src/app/shared/components/secret-storage/secret-key-input.component.scss
@@ -35,6 +35,9 @@
     --mdc-icon-button-disabled-icon-color: #FF5722;
   }
   ::ng-deep {
+    .mat-mdc-form-field .mat-mdc-form-field-infix {
+      width: min-content;
+    }
     .secret-chip-container {
       .secret-chip {
         margin: 0 0 0 8px;
